# gecko-dev

./: Cargo.toml  log.txt
.cargo/: config.in
browser/base/content/: browser-sets.inc  browser.js
gfx/layers/opengl/: MacIOSurfaceTextureHostOGL.cpp
gfx/layers/wr/: WebRenderCompositionRecorder.cpp  WebRenderCompositionRecorder.h
gfx/thebes/: gfxPlatform.cpp  gfxPrefs.h
gfx/webrender/: Cargo.toml
gfx/webrender/res/: base.glsl  brush_image.glsl  brush_linear_gradient.glsl  brush_radial_gradient.glsl
gfx/webrender/src/: debug_render.rs  internal_types.rs  lib.rs  render_backend.rs  renderer.rs  shade.rs
gfx/webrender/src/device/: gfx.rs
gfx/webrender_api/: Cargo.toml
gfx/webrender_api/src/: api.rs
gfx/webrender_bindings/: Cargo.toml  RenderCompositor.cpp  RenderCompositorSZEGED.cpp  RenderCompositorSZEGED.h  RenderMacIOSurfaceTextureHostOGL.cpp  RenderMacIOSurfaceTextureHostOGL.h  RenderThread.cpp  RenderThread.h  RendererOGL.cpp  RendererOGL.h  RendererScreenshotGrabber.cpp  RendererScreenshotGrabber.h  WebRenderAPI.cpp  moz.build  webrender_ffi.h  webrender_ffi_generated.h
gfx/webrender_bindings/src/: bindings.rs  lib.rs  moz2d_renderer.rs  program_cache.rs
gfx/wr/: .gitignore  .taskcluster.yml  .travis.yml  Cargo.toml  LICENSE  README.md  appveyor.yml  rustfmt.toml  servo-tidy.toml
gfx/wr/ci-scripts/: linux-debug-tests.sh  linux-release-tests.sh  macos-debug-tests.sh  macos-release-tests.sh  set-screenresolution.ps1  windows-pathfinder.cmd  windows-tests.cmd
gfx/wr/ci-scripts/docker-image/: Dockerfile  setup.sh
gfx/wr/ci-scripts/wrupdater/: README.md  converter.py  docker-setup.sh  read-json.py  requirements.txt  sync-to-github.sh
gfx/wr/debugger/: README.md  index.html  package-lock.json  package.json  webpack.config.js
gfx/wr/debugger/src/: App.vue  main.js
gfx/wr/direct-composition/: Cargo.toml
gfx/wr/direct-composition/src/: com.rs  egl.rs  lib.rs  main.rs  main_windows.rs
gfx/wr/examples/: Cargo.toml  README.md  alpha_perf.rs  animation.rs  basic.rs  blob.rs  document.rs  frame_output.rs  iframe.rs  image_resize.rs  multiwindow.rs  scrolling.rs  texture_cache_stress.rs  yuv.rs
gfx/wr/examples/common/: boilerplate.rs  image_helper.rs
gfx/wr/peek-poke/: Cargo.toml  LICENSE-MIT  README.md
gfx/wr/peek-poke/peek-poke-derive/: Cargo.toml
gfx/wr/peek-poke/src/: euclid.rs  lib.rs  slice_ext.rs  vec_ext.rs
gfx/wr/peek-poke/tests/: max_size.rs  round_trip.rs
gfx/wr/webrender/: Cargo.toml  build.rs  build_gfx.rs  shaders.ron
gfx/wr/webrender/doc/: CLIPPING_AND_POSITIONING.md  blob.md  swizzling.md  text-rendering.md
gfx/wr/webrender/res/: base.glsl  base_gfx.glsl  base_old.glsl  blit.glsl  brush.glsl  brush_blend.glsl  brush_image.glsl  brush_image_old.glsl  brush_linear_gradient.glsl  brush_linear_gradient_old.glsl  brush_mix_blend.glsl  brush_old.glsl  brush_radial_gradient.glsl  brush_radial_gradient_old.glsl  brush_solid.glsl  brush_solid_old.glsl  brush_yuv_image.glsl  brush_yuv_image_old.glsl  clip_shared.glsl  composite.glsl  cs_blur.glsl  cs_blur_old.glsl  cs_border_segment.glsl  cs_border_solid.glsl  cs_clip_box_shadow.glsl  cs_clip_image.glsl  cs_clip_rectangle.glsl  cs_gradient.glsl  cs_line_decoration.glsl  cs_scale.glsl  cs_svg_filter.glsl  debug_color.glsl  debug_font.glsl  ellipse.glsl  gpu_cache.glsl  gpu_cache_gfx.glsl  gpu_cache_update.glsl  mem_config.ron  pf_vector_cover.glsl  pf_vector_stencil.glsl  (+14 more)
gfx/wr/webrender/src/: batch.rs  border.rs  box_shadow.rs  capture.rs  clip.rs  clip_scroll_tree.rs  composite.rs  debug_colors.rs  debug_font_data.rs  debug_render.rs  debug_server.rs  display_list_flattener.rs  ellipse.rs  filterdata.rs  frame_builder.rs  freelist.rs  gamma_lut.rs  glyph_cache.rs  gpu_cache.rs  gpu_glyph_renderer.rs  gpu_types.rs  hit_test.rs  image.rs  intern.rs  intern_types.rs  internal_types.rs  lib.rs  picture.rs  print_tree.rs  profiler.rs  record.rs  render_backend.rs  render_target.rs  render_task.rs  render_task_cache.rs  render_task_graph.rs  renderer.rs  resource_cache.rs  scene.rs  scene_builder.rs  (+12 more)
gfx/wr/webrender/src/device/: gfx.rs  gl.rs  mod.rs  query_gfx.rs  query_gl.rs
gfx/wr/webrender/src/device/gfx/: blend_state.rs  buffer.rs  command.rs  descriptor.rs  device.rs  image.rs  mod.rs  program.rs  render_pass.rs  vertex_types.rs
gfx/wr/webrender/src/glyph_rasterizer/: mod.rs  no_pathfinder.rs  pathfinder.rs
gfx/wr/webrender/src/platform/macos/: font.rs
gfx/wr/webrender/src/platform/unix/: font.rs
gfx/wr/webrender/src/platform/windows/: font.rs
gfx/wr/webrender/src/prim_store/: backdrop.rs  borders.rs  gradient.rs  image.rs  interned.rs  line_dec.rs  mod.rs  picture.rs  text_run.rs
gfx/wr/webrender/tests/: angle_shader_validation.rs  bug_124.html  bug_134.html  bug_137.html  bug_143.html  bug_159.html  bug_166.html  bug_176.html  bug_177.html  bug_178.html  bug_203a.html  bug_203b.html  bug_servo_10136.html  bug_servo_10164.html  bug_servo_10307.html  bug_servo_11358.html  bug_servo_9983a.html  fixed-position.html  mix-blend-mode-2.html  mix-blend-mode.html  nav-1.html  nav-2.html
gfx/wr/webrender_api/: Cargo.toml
gfx/wr/webrender_api/src/: api.rs  channel.rs  channel_ipc.rs  channel_mpsc.rs  color.rs  display_item.rs  display_list.rs  font.rs  gradient_builder.rs  image.rs  lib.rs  units.rs
gfx/wr/webrender_build/: Cargo.toml
gfx/wr/webrender_build/src/: lib.rs  shader.rs
gfx/wr/wr_malloc_size_of/: Cargo.toml  lib.rs
gfx/wr/wrench/: .gitignore  Cargo.toml  README.md  android.txt  build.rs
gfx/wr/wrench/benchmarks/: aligned-gradient.yaml  benchmarks.list  box-shadow-large.yaml  clip-clear.yaml  large-blur-radius.yaml  large-boxshadow-ellipse-2.yaml  large-boxshadow-ellipse.yaml  large-clip-rect.yaml  many-box-shadows.yaml  many-images.yaml  overlapping-text-shadows.yaml  radial-gradient.yaml  simple-batching.yaml  text-rendering.yaml  (+2 more)
gfx/wrench/: Cargo.toml  gl.txt  vulkan.txt
layout/reftests/bugs/: reftest.list
layout/reftests/printing/: reftest.list
modules/libpref/init/: StaticPrefList.yaml
widget/cocoa/: nsChildView.mm  nsCocoaWindow.mm
(+642 files in other folders)
