[package]
name = "webrender_bindings"
version = "0.1.0"
authors = ["The Mozilla Project Developers"]
license = "MPL-2.0"

[features]
webrender_debugger = ["webrender/debugger"]
default = ["vulkan"]
dx12 = ["gfx-backend-dx12", "dirs"]
metal = ["gfx-backend-metal", "dirs"]
vulkan = ["gfx-backend-vulkan", "dirs"]

[dependencies]
rayon = "1"
num_cpus = "1.7.0"
thread_profiler = "0.1.1"
euclid = { version = "0.20.0", features = ["serde"] }
app_units = "0.7"
#gleam = "0.6.14"
log = "0.4"
nsstring = { path = "../../xpcom/rust/nsstring" }
bincode = "1.0"
uuid = { version = "0.7", features = ["v4"] }
fxhash = "0.2.1"
ron = "0.1.7"
dirs = { version = "1.0", optional = true }

[dependencies.webrender]
path = "../wr/webrender"
version = "0.60.0"
default-features = false
features = ["capture", "serialize_program", "serde"]

[target.'cfg(target_os = "windows")'.dependencies]
dwrote = "0.9"
gfx-backend-dx12 = { version = "0.4.3", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.6"
core-graphics = "0.17"
foreign-types = "0.3.0"

[target.'cfg(target_os = "macos")'.dependencies.gfx-backend-metal]
version = "0.4.0"
optional = true

[target.'cfg(all(any(unix, windows), not(target_os = "macos")))'.dependencies.gfx-backend-vulkan]
version = "0.4.0"
optional = true
features = ["x11"]
