[package]
name = "webrender-examples"
version = "0.1.0"
authors = ["Glenn Watson <gw@intuitionlibrary.com>"]
license = "MPL-2.0"
repository = "https://github.com/servo/webrender"

[[bin]]
name = "alpha_perf"
path = "alpha_perf.rs"

[[bin]]
name = "animation"
path = "animation.rs"

[[bin]]
name = "basic"
path = "basic.rs"

[[bin]]
name = "blob"
path = "blob.rs"

[[bin]]
name = "document"
path = "document.rs"

[[bin]]
name = "frame_output"
path = "frame_output.rs"
required-features = ["gl"]

[[bin]]
name = "iframe"
path = "iframe.rs"

[[bin]]
name = "image_resize"
path = "image_resize.rs"

[[bin]]
name = "multiwindow"
path = "multiwindow.rs"

[[bin]]
name = "scrolling"
path = "scrolling.rs"

[[bin]]
name = "texture_cache_stress"
path = "texture_cache_stress.rs"

[[bin]]
name = "yuv"
path = "yuv.rs"
required-features = ["gl"]

[features]
default = []
debug = ["webrender/capture", "webrender/debugger", "webrender/profiler"]
gfx-hal = ["dirs"]
gl = ["gleam", "glutin", "webrender/gleam", "webrender/gfx-backend-empty"]
dx12 = ["webrender/dx12", "gfx-hal"]
metal = ["webrender/metal", "gfx-hal"]
vulkan = ["webrender/vulkan", "gfx-hal"]

[dependencies]
app_units = "0.7"
dirs = { version = "1.0", optional = true }
env_logger = "0.5"
euclid = "0.19"
gfx-backend-empty = { git = "https://github.com/gfx-rs/gfx.git" }
gleam = { version = "0.6.2", optional = true}
glutin = { version = "0.19", optional = true }
rayon = "1"
webrender = { path = "../webrender" }
winit = "0.18"
