[package]
name = "webrender"
version = "0.59.0"
authors = ["Glenn Watson <gw@intuitionlibrary.com>"]
license = "MPL-2.0"
repository = "https://github.com/servo/webrender"
description = "A GPU accelerated 2D renderer for web content"
build = "build.rs"

[features]
default = ["freetype-lib"]
freetype-lib = ["freetype/servo-freetype-sys"]
profiler = ["thread_profiler/thread_profiler"]
debugger = ["ws", "serde_json", "image", "base64"]
capture = ["webrender_api/serialize"]
replay = ["webrender_api/deserialize"]
pathfinder = ["pathfinder_font_renderer", "pathfinder_gfx_utils", "pathfinder_partitioner", "pathfinder_path_utils"]
serialize_program = ["webrender_build/serialize_program"]
no_static_freetype = []
dx12 = [ "gfx-backend-dx12" ]
metal = [ "gfx-backend-metal" ]
vulkan = [ "gfx-backend-vulkan" ]
gecko = []

[build-dependencies]
webrender_build = { version = "0.0.1", path = "../webrender_build" }
cfg-if = "0.1.2"
glsl-to-spirv = "0.1"
gfx-hal = { git = "https://github.com/gfx-rs/gfx.git", rev = "37a177c6ba59a0b073c5ee56eaf9e5ce3b9a3d33" }
ron = "0.1.7"
serde = { version = "1.0", features = ["serde_derive"] }

[dependencies]
app_units = "0.7"
base64 = { optional = true, version = "0.10" }
bincode = "1.0"
bitflags = "1.0"
byteorder = "1.0"
cfg-if = "0.1.2"
dirs = "1.0"
fxhash = "0.2.1"
gfx-hal = { git = "https://github.com/gfx-rs/gfx.git", features = ["serde"], rev = "37a177c6ba59a0b073c5ee56eaf9e5ce3b9a3d33" }
gfx-backend-empty = { git = "https://github.com/gfx-rs/gfx.git", rev = "37a177c6ba59a0b073c5ee56eaf9e5ce3b9a3d33" }
gleam = { optional = true, version = "0.6.8" }
image = { optional = true, version = "0.21" }
lazy_static = "1"
log = "0.4"
malloc_size_of_derive = "0.1"
num-traits = "0.2"
plane-split = "0.13.3"
png = { optional = true, version = "0.14" }
rand ="0.4"
rayon = "1"
rendy-memory = { git = "https://github.com/zakorgy/rendy.git", branch = "memory_for_gecko" }
ron = "0.1.7"
serde = { version = "1.0", features = ["serde_derive"] }
serde_json = { optional = true, version = "1.0" }
sha2 = "0.8"
smallvec = "0.6"
thread_profiler = "0.1.1"
time = "0.1"
webrender_api = { version = "0.58.0", path = "../webrender_api" }
webrender_build = { version = "0.0.1", path = "../webrender_build" }
wr_malloc_size_of = { version = "0.0.1", path = "../wr_malloc_size_of" }
ws = { optional = true, version = "0.7.3" }

[dependencies.pathfinder_font_renderer]
git = "https://github.com/pcwalton/pathfinder"
branch = "webrender"
optional = true
# Uncomment to test FreeType on macOS:
# features = ["freetype"]

[dependencies.pathfinder_gfx_utils]
git = "https://github.com/pcwalton/pathfinder"
branch = "webrender"
optional = true

[dependencies.pathfinder_partitioner]
git = "https://github.com/pcwalton/pathfinder"
branch = "webrender"
optional = true

[dependencies.pathfinder_path_utils]
git = "https://github.com/pcwalton/pathfinder"
branch = "webrender"
optional = true

[dev-dependencies]
mozangle = "0.1"
rand = "0.4"

[target.'cfg(any(target_os = "android", all(unix, not(target_os = "macos"))))'.dependencies]
freetype = { version = "0.4", default-features = false }
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
dwrote = "0.8"
gfx-backend-dx12 = { git = "https://github.com/gfx-rs/gfx.git", optional = true, rev = "37a177c6ba59a0b073c5ee56eaf9e5ce3b9a3d33" }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.6"
core-graphics = "0.17.1"
core-text = { version = "13", default-features = false }
gfx-backend-metal = { git = "https://github.com/gfx-rs/gfx.git", optional = true, rev = "37a177c6ba59a0b073c5ee56eaf9e5ce3b9a3d33" }

[target.'cfg(all(any(unix, windows), not(target_os = "macos")))'.dependencies.gfx-backend-vulkan]
git = "https://github.com/gfx-rs/gfx.git"
optional = true
rev = "37a177c6ba59a0b073c5ee56eaf9e5ce3b9a3d33"
